--- a/app/src/main/res/navigation/nav_feed.xml
+++ b/app/src/main/res/navigation/nav_feed.xml
@@ -2,27 +2,24 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_feed"
-    app:startDestination="@id/fragment_feed">
+    android:id="@+id/navFeed"
+    app:startDestination="@id/fragmentFeed">
 
     <fragment
-        android:id="@+id/fragment_feed"
+        android:id="@+id/fragmentFeed"
         android:name="com.jgt.twitter.ui.feed.feed.FeedFragment"
         android:label="@string/fragment_feed_label"
         tools:layout="@layout/fragment_feed">
         <action
             android:id="@+id/on_tweet_clicked"
-            app:destination="@+id/fragment_tweet" />
+            app:destination="@+id/fragmentTweet" />
     </fragment>
 
     <fragment
-        android:id="@+id/fragment_tweet"
+        android:id="@+id/fragmentTweet"
         android:name="com.jgt.twitter.ui.feed.tweet.TweetFragment"
         android:label="@string/fragment_tweet_label"
         tools:layout="@layout/fragment_tweet">
-        <action
-            android:id="@+id/on_back_clicked"
-            app:destination="@+id/fragment_feed" />
     </fragment>
 
 </navigation>
