--- a/app/src/main/res/navigation/nav_login.xml
+++ b/app/src/main/res/navigation/nav_login.xml
@@ -2,27 +2,24 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav_login"
-    app:startDestination="@id/fragment_login">
+    android:id="@+id/navLogin"
+    app:startDestination="@id/fragmentLogin">
 
     <fragment
-        android:id="@+id/fragment_login"
+        android:id="@+id/fragmentLogin"
         android:name="com.jgt.twitter.ui.auth.login.LoginFragment"
         android:label="@string/fragment_login_label"
         tools:layout="@layout/fragment_login">
         <action
             android:id="@+id/on_register_clicked"
-            app:destination="@+id/fragment_register" />
+            app:destination="@+id/fragmentRegister" />
     </fragment>
 
     <fragment
-        android:id="@+id/fragment_register"
+        android:id="@+id/fragmentRegister"
         android:name="com.jgt.twitter.ui.auth.register.RegisterFragment"
         android:label="@string/fragment_register_label"
         tools:layout="@layout/fragment_register">
-        <action
-            android:id="@+id/on_back_clicked"
-            app:destination="@+id/fragment_login" />
     </fragment>
 
 </navigation>
