--- a/app/src/main/res/layout/item_feed.xml
+++ b/app/src/main/res/layout/item_feed.xml
@@ -8,7 +8,6 @@
     android:layout_marginTop="5dp"
     android:layout_marginEnd="5dp"
     android:background="@drawable/rounded_bg"
-    android:clickable="true"
     android:padding="20dp">
 
     <TextView
@@ -33,5 +32,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <ImageView
+        android:id="@+id/btnDelete"
+        android:layout_width="16dp"
+        android:layout_height="16dp"
+        android:clickable="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_close_black" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
