--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -4,62 +4,86 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:gravity="center">
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layoutTweet"
+    <TextView
+        android:id="@+id/tvError"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:background="@drawable/rounded_bg"
-        android:padding="20dp">
+        android:layout_height="match_parent"
+        android:text="There was an error in loading user feed."
+        android:textSize="20dp"
+        android:gravity="center"
+        android:visibility="gone"/>
 
-        <TextView
-            android:id="@+id/tvTweetUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Username"
-            android:textSize="20dp"
-            android:textColor="@color/black"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <ProgressBar
+        android:id="@+id/pbFeedLoad"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
-        <EditText
-            android:id="@+id/etTweetBody"
+    <LinearLayout
+        android:id="@+id/layoutFeed"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:visibility="gone">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layoutTweet"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="What's happening?"
-            android:inputType="textMultiLine"
-            app:layout_constraintStart_toStartOf="@+id/tvTweetUser"
-            app:layout_constraintTop_toBottomOf="@+id/tvTweetUser" />
+            android:layout_margin="5dp"
+            android:background="@drawable/rounded_bg"
+            android:padding="20dp">
 
-        <Button
-            android:id="@+id/btnTweet"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/tvTweetUser"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Username"
+                android:textColor="@color/black"
+                android:textSize="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/etTweetBody"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="What's happening?"
+                android:inputType="textMultiLine"
+                app:layout_constraintStart_toStartOf="@+id/tvTweetUser"
+                app:layout_constraintTop_toBottomOf="@+id/tvTweetUser" />
+
+            <Button
+                android:id="@+id/btnTweet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:text="Tweet"
+                app:layout_constraintEnd_toEndOf="@+id/etTweetBody"
+                app:layout_constraintTop_toBottomOf="@+id/etTweetBody" />
+
+            <TextView
+                android:id="@+id/tvCharCount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="TextView"
+                android:textSize="15dp"
+                android:visibility="invisible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvFeed"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:text="Tweet"
-            app:layout_constraintEnd_toEndOf="@+id/etTweetBody"
-            app:layout_constraintTop_toBottomOf="@+id/etTweetBody" />
+            android:layout_weight="1"
+            tools:listitem="@layout/item_feed" />
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/tvCharCount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textSize="15dp"
-            android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvFeed"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        tools:listitem="@layout/item_feed" />
 
 </LinearLayout>
