--- a/app/src/main/res/navigation/nav_feed.xml
+++ b/app/src/main/res/navigation/nav_feed.xml
@@ -9,6 +9,20 @@
         android:id="@+id/fragmentFeed"
         android:name="com.jgt.twitter.ui.feed.feed.FeedFragment"
         android:label="@string/fragment_feed_label"
-        tools:layout="@layout/fragment_feed" />
+        tools:layout="@layout/fragment_feed">
+        <action
+            android:id="@+id/on_edit_tweet"
+            app:destination="@+id/fragmentEdit" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/fragmentEdit"
+        android:name="com.jgt.twitter.ui.feed.edit.EditFragment"
+        android:label="@string/fragment_feed_label"
+        tools:layout="@layout/fragment_feed">
+        <action
+            android:id="@+id/on_back_to_feed"
+            app:destination="@+id/fragmentFeed" />
+    </fragment>
 
 </navigation>
