--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -17,10 +17,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/tvTweetDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:text="@string/date_posted"
+        android:textColor="@color/black_50"
+        android:textSize="14dp"
+        app:layout_constraintBottom_toBottomOf="@+id/tvTweetUser"
+        app:layout_constraintStart_toEndOf="@+id/tvTweetUser"
+        app:layout_constraintTop_toTopOf="@+id/tvTweetUser" />
+
     <EditText
         android:id="@+id/etTweetBody"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:hint="@string/whats_happening"
         android:inputType="textMultiLine"
         app:layout_constraintStart_toStartOf="@+id/tvTweetUser"
